// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormSelect With Custom Placeholder 1`] = `
<div
  className="mb-2"
>
  <select
    className="mb-2 text-gray-500 "
    id="Select with custom placeholder"
    min={20}
    name="Select with custom placeholder"
    onBlur={[Function]}
    onChange={[Function]}
    required={true}
  >
    <option
      value=""
    >
      This is a custom placeholder
    </option>
    <option
      value="First option"
    >
      First option
    </option>
    <option
      value="Second option"
    >
      Second option
    </option>
    <option
      value="Third option"
    >
      Third option
    </option>
  </select>
</div>
`;

exports[`Storyshots Forms/FormSelect With Errors 1`] = `
<div
  className="mb-2"
>
  <select
    className="mb-2 text-gray-500 error"
    id="Select with custom placeholder"
    min={20}
    name="Select with custom placeholder"
    onBlur={[Function]}
    onChange={[Function]}
    required={true}
  >
    <option
      value=""
    >
      Bitte wähle eine Option
    </option>
    <option
      value="First option"
    >
      First option
    </option>
    <option
      value="Second option"
    >
      Second option
    </option>
    <option
      value="Third option"
    >
      Third option
    </option>
  </select>
  <p
    className="text-red-500 text-sm"
  >
    This is an error message
  </p>
  <p
    className="text-red-500 text-sm"
  >
    This is another error message
  </p>
</div>
`;

exports[`Storyshots Forms/FormSelect With Label 1`] = `
<div
  className="mb-2"
>
  <label
    className="block mb-2 cursor-pointer transition hover:opacity-60"
    htmlFor="Select with label"
  >
    Default label
  </label>
  <select
    className="mb-2 text-gray-500 "
    id="Select with label"
    min={20}
    name="Select with label"
    onBlur={[Function]}
    onChange={[Function]}
    required={true}
  >
    <option
      value=""
    >
      Bitte wähle eine Option
    </option>
    <option
      value="First option"
    >
      First option
    </option>
    <option
      value="Second option"
    >
      Second option
    </option>
    <option
      value="Third option"
    >
      Third option
    </option>
  </select>
</div>
`;

exports[`Storyshots Forms/FormSelect Without Label 1`] = `
<div
  className="mb-2"
>
  <select
    className="mb-2 text-gray-500 "
    id="Select without label"
    min={20}
    name="Select without label"
    onBlur={[Function]}
    onChange={[Function]}
    required={true}
  >
    <option
      value=""
    >
      Bitte wähle eine Option
    </option>
    <option
      value="First option"
    >
      First option
    </option>
    <option
      value="Second option"
    >
      Second option
    </option>
    <option
      value="Third option"
    >
      Third option
    </option>
  </select>
</div>
`;
